Sat Mar 29 14:18:41 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/*: full update Ruby/Tk to support Ruby(1.9|1.8) and Tc/Tk8.5.

	* ext/tk/lib/tkextlib/tile.rb: [incompatible] remove TileWidgets' 
	  instate/state/identify method to avoid the conflict with standard
	  widget options. Those methods are renamed to ttk_instate/ttk_state/
	  ttk_identify (tile_instate/tile_state/tile_identify are available 
	  too). Although I don't recommend, if you realy need old methods, 
	  please define "Tk::USE_OBSOLETE_TILE_STATE_METHOD = true" before 
	  "require 'tkextlib/tile'".

	* ext/tk/lib/tkextlib/tile.rb: "Tk::Tile::__Import_Tile_Widgets__!"
	  is obsolete. It outputs warning. To control default widget set, 
	  use "Tk.default_widget_set = :Ttk".

	* ext/tk/lib/tk.rb: __IGNORE_UNKNOWN_CONFIGURE_OPTION__ method and 
	  __set_IGNORE_UNKNOWN_CONFIGURE_OPTION__!(mode) method are defind 
	  as module methods of TkConfigMethod. It may help users to wrap old 
	  Ruby/Tk scripts (use standard widgets) to force to use Ttk widgets.
	  Ttk widgets don't have some options of standard widgets which are 
	  control the view of widgets. When set ignore-mode true, configure 
	  method tries to ignoure such unknown options with no exception. 
	  Of course, it may raise other troubles on the GUI design. 
	  So, those are a little danger methods. 

	* ext/tk/lib/tk/itemconfig.rb: __IGNORE_UNKNOWN_CONFIGURE_OPTION__ 
	  method and __set_IGNORE_UNKNOWN_CONFIGURE_OPTION__!(mode) method 
	  are defind as module methods of TkItemConfigMethod as the same 
	  purpose as TkConfigMethod's ones.

	* ext/tk/sample/ttk_wrapper.rb: A new example. This is a tool for 
	  wrapping old Ruby/Tk scripts (which use standard widgets) to use 
	  Ttk (Tile) widgets as default.

	* ext/tk/sample/tkextlib/tile/demo.rb: use ttk_instate/ttk_state 
	  method instead of instate/state method.

	* ext/tk/lib/tk/root, ext/tk/lib/tk/namespace.rb,